testData/inspections/linkResolve/fileDoesntExist.adoc
link:<error descr="File doesn't resolve">notfound.adoc</error>[]
